better end of line filtering

--- a/verses.html
+++ b/verses.html
@@ -15,42 +15,48 @@
             day: Number(document.getElementById('endDay').value),
           },
         };
+
+        const week = Number(document.getElementById('week').value);
+
         const values = {
           _id:
-            Math.random()
-              .toString(36)
-              .substring(2, 10) +
-            Math.random()
-              .toString(36)
-              .substring(2, 10),
+            Math.random().toString(36).substring(2, 10) +
+            Math.random().toString(36).substring(2, 10),
           year: Number(document.getElementById('year').value),
-          week: Number(document.getElementById('week').value),
+          week,
           customDateRange,
           dateRange,
           book: document.getElementById('book').value,
           chapter: document.getElementById('chapter').value,
           startVerse: document.getElementById('startVerse').value,
           endVerse: document.getElementById('endVerse').value,
-          text: document.getElementById('text').value,
+          text: document
+            .getElementById('text')
+            .value.replace(/(\r\n|\n|\r)/gm, ''),
         };
-        const rootVerseURL = 'https://www.bible.com/bible/59/';
+        const rootVerseURL = 'https://bible.com/bible/59/';
         let betterBookName = '';
-        console.log(betterBookName)
-        if (values.book === "John") {
+        console.log(betterBookName);
+        if (values.book === 'John') {
           betterBookName = 'JHN';
         }
-        if (values.book === "1 John") {
-          betterBookName = '1JHN';
-        } 
+        if (values.book === '1 John') {
+          betterBookName = '1jn';
+        }
+        if (values.book === 'Philippians') {
+          betterBookName = 'php';
+        }
 
-        values.verseURL = `${rootVerseURL}${betterBookName ? betterBookName : values.book
-          .replace(' ', '')
-          .slice(0, 3)
-          .toLocaleLowerCase()}.${values.chapter}.${values.startVerse}${
+        values.verseURL = `${rootVerseURL}${
+          betterBookName
+            ? betterBookName
+            : values.book.replace(' ', '').slice(0, 3).toLocaleLowerCase()
+        }.${values.chapter}.${values.startVerse}${
           values.endVerse ? '-' + values.endVerse : ''
         }`;
 
-        document.getElementById('preObject').value = JSON.stringify(values);
+        document.getElementById('preObject').value =
+          JSON.stringify(values) + ',';
         /* Get the text field */
         var copyText = document.getElementById('preObject');
 
@@ -66,14 +72,15 @@
       }
     </script>
   </head>
+
   <body>
     <form onsubmit="return getFormValues();">
       <label>Year</label>
-      <input style="margin-top: 20px;" id="year" value="2020" />
+      <input style="margin-top: 20px" id="year" value="2022" />
       <label>Week</label>
-      <input style="margin-top: 20px;" id="week" /> <br />
+      <input style="margin-top: 20px" id="week" /> <br />
       <label>customDateRange</label>
-      <select style="margin-top: 20px;" id="customDateRange">
+      <select style="margin-top: 20px" id="customDateRange">
         <br />
         <option value="false">false</option>
         <option value="true">true</option>
@@ -85,17 +92,17 @@
       <input placeholder="End Month" type="number" id="endMonth" />
       <input placeholder="End Day" type="number" id="endDay" />
       <br />
-      <label>book</label> <input style="margin-top: 20px;" id="book" />
+      <label>book</label> <input style="margin-top: 20px" id="book" />
       <br />
-      <label>chapter</label> <input style="margin-top: 20px;" id="chapter" />
+      <label>chapter</label> <input style="margin-top: 20px" id="chapter" />
       <br />
       <label>start verse</label>
-      <input style="margin-top: 20px;" id="startVerse" />
+      <input style="margin-top: 20px" id="startVerse" />
       <br />
-      <label>end verse</label> <input style="margin-top: 20px;" id="endVerse" />
+      <label>end verse</label> <input style="margin-top: 20px" id="endVerse" />
       <br />
       <textarea
-        style="margin: 20px; padding-top: 10px;"
+        style="margin: 20px; padding-top: 10px"
         id="text"
         rows="4"
         cols="200"
@@ -107,7 +114,7 @@
     <br />
     <textarea
       id="preObject"
-      style="margin: 20px; padding-top: 10px;"
+      style="margin: 20px; padding-top: 10px"
       rows="10"
       cols="200"
       placeholder="Object"
